Fix horizontal scroll

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,10 +36,11 @@
 /*==========================================================================
    General styles
    ========================================================================== */
-
+html,
 body {
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 h5 {
